--- a/manual/20250225.md
+++ b/manual/20250225.md
@@ -25,3 +25,163 @@ https://nodejs.org
     - Set-ExecutionPolicy RemoteSigned -Scope CurrentUser -Force
       - Restricted -> RemoteSigned로 변경하는 것
 
+확장 프로그램
+- one dark Pro
+- indent rainbow
+- live server
+- Reactjs code snippets
+- ESLint
+- Prettier - Code formatter
+
+### React Project 생성 및 실행
+- vite
+
+: 리액트 프로젝트 생성을 위해서 CRA(Create React App)이 가장 많이 이용되었으나 현재는 이용률이 감소했고, 공식 문서에서도 추천하지 않습니다.
+
+그리고 vite의 경우 CRA에 비해서 더 빠른 개발 서버를 제공하고 있어 초심자들이 React를 배우는데 있어 적합하여 선택
+
+vite version은 해당 수업에서 4.3
+
+### React는 무엇이고, vite 는 무엇인가?
+
+__1. React__ 
+
+: JavaScript의 라이브러리(META 개발) 사용자가 웹 애플리케이션 사용자 인터페이스(UI)를 쉽게 만들 수 있도록 지원하기 위한 프로그램
+
+- 특징
+1. 컴포넌트(Component - Based)
+    - 애플리케이션 부분을 컴포넌트 단위로 분할하여 개발
+    - ex) 웹 페이지 상의 버튼, 입력 창, 네비게이션 같은 요소 하나하나를 컴포넌트로 봅니다.
+    - 재사용성을 높이기 위해서
+2. 가상 DOM(Virual DOM)
+    - 웹 브라우저는 화면에 요소를 표시하기 위해 DOM(Document Object Model)을 사용합니다. 하지만 DOM을 직접 수정하는 경우 성능이 저하 될 수 있는 문제점이 잠재되어있습니다.
+    - React의 경우에는 가상 DOM을 이용하여 변경사항을 먼저 메모리에 저장하고, 실제 DOM에 필요한 부분만을 업데이트 합니다.
+    - 이상을 이유로 화면이 부드럽게 업데이트 됩니다.(전체 로딩이 아니라)
+3. 단방향 데이터 흐름(One-way Data Flow)
+    - React에서는 데이터가 부모 컴포넌트로부터 자식 컴포넌트로 한 방향으로만 움직입니다.(상속 개념이 중요)
+    - 이를 통해 데이터의 흐름이 예측 가능하고 디버깅을 하는데에 용이함
+4. JSX(JavaScript XML) -> XML : Extended Markup Language
+    - JSX라는 문벙을 사용하는데, 대표적으로는 JavaScript 내에서 HTML 코드를 작성할 수 있도록 합니다.
+
+```jsx
+const element = <h1>Hello, React!</h1>
+```
+
+5. SPA(Single Page Appiction) 지원
+    - 이상의 SPA를 쉽게 만들도록 지원함
+    - SPA의 경우 사용자가 페이지를 이동해도 전체 페이지가 다시 로드되는 것이 아니라, 필요한 부분만 업데이트 됩니다.
+
+
+__2. Vite__
+
+: 웹 애플리케이션을 더 빠르고 효율적으로 개발할 수 있도록 지원하는 '번들러와 개발 서버'에 해당
+
+- 특징
+1. 빠른 개발 서버
+    - 기존 웹 개발 도구들이 무거워짐에 따라 느려졌지만 Vite 는 좀 더 빠르다는 장점이 있음
+2. 빠른 빌드
+    - Rollup 이라는 도구를 통해 최종 버전을 빠르게 생성하도록 지원함
+3. 쉬움
+    - 기본 설정이 완성되어있는 편이라 초심자가 접근하기 좋습니다.
+
+#### React Project 설정 명령어
+
+npm create vite@4.3 -> 4.3 버전으로 명시
+npm create vite@latest -> 최신 버전 설치
+
+y
+projectName: vite-project
+React
+JavaScript
+
+-> Open folder 해서 vite-project
+-> 터미널 열고
+-> npm install -> 의존성 주입
+-> npm run dev
+-> local의 링크 따라가기
+
+### Starting React
+1. Component 생성
+2. JSX 기초
+3. 조건부 렌더링
+4. 컨텍스트 API
+5. ES6
+6. Prop / State (프롭/상태) 
+7. React Hook
+8. React 목록 / 이벤트 / 폼
+
+#### 컴포넌트 생성 방법
+```
+Root Component
+    |
+Search Component - Table Component
+                        |
+                   Table-Row-Component
+```
+- 리액트 컴포넌트는 함수 컴포넌트인 자바스크립트 함수 또는 클래스 컴포넌트 ES6 자바스크립트 클래스를 이용해 정의할 수 있다.
+
+1. 함수 컴포넌트 사용
+```js
+function App() {
+    return <h1>Hello World</h1>
+}
+```
+
+2. ES6 클래스 사용
+```jsx
+class App extends React.Component {
+    render() {
+        return <h1>Hello World</h1>
+    }
+}
+```
+
+- 2-1. ES6에 관련된 추가 설명
+- 클래스로 구현된 컴포넌트의 경우에 렌더링된 출력을 표시하고 업데이트할 render() 메서드가 필수적으로 포함되어야 함
+- 해당 수업에서는 최대한 간결한 코드를 위해서 함수 컴포넌트를 주로 사용할 예정
+- ES6 클래스 이용은 현재 공식적으로 권장되지 않는 중
+
+* React component의 이름은 대문자로 시작하고, Pascal Case를 사용합니다.(그래서 App 이었음.)
+```jsx
+function App2() {
+  return (
+    <h1>Hello World</h1>
+    <h2>첫 번째 리액트 컴포넌트</h2>
+  );
+}
+
+export default App2
+```
+
+이상의 코드는 문제가 발생
+
+컴포넌트의 return에 있어서 중요한 점 :
+- 기본적으로 하나의 요소만 return이 가능
+- 즉, h1, h2 두 개의 요소를 지니고 있는 현재의 App2는 적용이 불가능
+```jsx
+function App2() {
+  return (
+    <>
+      <h1>Hello World</h1>
+      <h2>첫 번째 리액트 컴포넌트</h2>
+    </>
+  );
+}
+
+export default App2
+```
+
+- 하나의 요소로 묶어주기 위해 상위 div 선언해서 그 안에 h1, h2 를 묶는 방법으로 하나만 return
+- 그런데 꼭 div으로 한정 지을 필요가 없기 때문에 <> </> 개념이 등장 -> fragment
+
+#### 리액트 앱의 구조
+
+main.jsx 를 기준으로 -> import문 부분 <App /> 부분을 갱신해야 우리의 수정사항이 앞으로 잘 보이게 될 겁니다.
+-> 시간차가 조금 있음
+
+* Vite가 만든 App 컴포넌트에는 구문 끝에 ; 이 없습니다. JS 상에서의 세미콜론은 선택사항이긴 한데, 저희는 항상 찍어주는 연습을 하도록 함.
+
+#### ES6 기능
+
+let / const
+example.js 파일 만들어서 JS를 react 앱의 개발자 도구를 통해 확인
