--- a/manual/20250306.md
+++ b/manual/20250306.md
@@ -67,3 +67,115 @@ npm create vite@4.3
 
 weatherapp
 react / javascript
+
+App.jsx 불필요 부분 지우고 return에 <></>만 남김
+body에 배경색 5f5f5f 삽입
+
+이상을 완료한 후에
+
+응답데이터를 저장하는데 필요한 상태를 추가할 예정. 온도 / 설명 / 날씨 아이콘을 표시할 예정
+1. 온도 상태 / 설명 상태 / 날씨 아이콘 의 각각의 상태를 만드는 방법
+2. weather 객체를 만든 다음 거기에 property로 온도 / 설명 / 날씨 아이콘을 집어넣는 방법
+
+https://api.openweathermap.org/data/2.5/weather?q=Seoul&units=Meric&APIkey=(weatherAPI key 값)
+
+이상의 사이트에서 JSON 데이터를 분석했을 때,
+desc - description : console.log(weather[0].description);
+icon - icon : console.log(weather[0].icon);
+temp - temp : console.log(main.temp);
+
+이상의 JSON 데이터를 분석하여 console.log()를 찍는다고 가정했을 때,
+description, icon, temp의 정보를 가지고 오기 위한 주소지를 찾으시오.
+```jsx
+MENU = {
+  "에스프레소":{
+    "재료":{
+      "물":100,
+      "커피":18,
+    },
+    "가격": 1.8,
+  }
+}
+```
+이라고 가정했을 경우, 가격 1.8을 출력하기 위해서는 
+```console.log(MENU["에스프레소"]["가격"])```이라고 주소지를 설정해야함.
+
+1. react dev tool 설치
+2. 설치 터미널 명령어
+    - npm install -g react-devtools
+3. 실행 터미널 명령어
+    - npm react-devtools
+4. 그 다음에 터미널에 ctrl + c 눌러서 서버 종료 하신 다음에
+    - npm run dev 눌러서 5173 아니어도 됩니다.
+5. npx react-devtools
+
+6. 
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script src="http://localhost:8097"></script>
+```
+에 지정
+
+7. npm run dev 해가지고 연결 기다림
+
+react dev-tools 상에서 App을 클릭하니까 temp/desc/icon 값이 들어가 있는 것을 확인
+temp/desc/icon 순으로 했지만 그 순서가 아니라
+알파벳 순으로 정렬
+객체의 key가 입력 순서를 담보 하지 않음
+
+개발자 도구 상에서 Network 탭에서 200 ok 인지 확인
+
+이상까지 확인했을 때 데이터를 가지고 온 것까지 완료
+렌더링되는 부분을 작성하지 않았습니다. 그래서 return 문 작성
+
+잠재적인 문제점은 아이콘 그림인데 확인했을 때 "" 인 것을 확인
+이미지 코드가 없기 때문에 오류 발생
+
+날씨 아이콘 추가를 위해서 아이콘 확장자를 추가해주는 등의 작업이 요구
+
+아이콘 정보 관련
+
+https://openweathermap.org/weather-conditions
+
+- 이상 예제에서 날씨 정보를 필요한 부분만 가지고 오는 연습을 했습니다.
+즉 API Key를 발급받고서, 내부에 있는 JSON 데이터를 참조한 뒤에
+필요한 날씨 설명, 아이콘, 기온을 가지고 와서 useState를 통해 객체에 집어넣은 후,
+이를 출력할 수 있도록 코드를 작성
+
+해당 파트에서 낯선 부분이라면 fetch 와 관련되어있는 부분인데, 추후 더 설명할 예정이지만, 기본적 개념은 20250305.md 파일에 ctrl + f 눌러서 fetch 검색하길
+
+## #2 Github API -> axios 사용
+
+### 타입스크립트 사용을 위해 또 프로젝트 만듬
+npm create vite@4.3
+√ Project name: ... githubapiapp
+√ Select a framework: » React
+√ Select a variant: » TypeScript
+
+폴더 githubapiapp 으로 열어서
+npm install
+npm install axios
+npm run dev
+
+App.tsx에 빈칸으로 비우겠습니다.
+
+다 지웠을 때(즉 프로젝트 초기 시작일때 App의 형태)
+
+```tsx
+import './App.css'
+
+function App() {
+  
+  return (
+    <>
+     
+    </>
+  )
+}
+
+export default App
+```
+Github API URL : 
+https://api.github.com/search/repositor?q=react
