--- a/manual/20250306.md
+++ b/manual/20250306.md
@@ -149,17 +149,15 @@ https://openweathermap.org/weather-conditions
 ## #2 Github API -> axios 사용
 
 ### 타입스크립트 사용을 위해 또 프로젝트 만듬
-npm create vite@4.3
-√ Project name: ... githubapiapp
-√ Select a framework: » React
-√ Select a variant: » TypeScript
-
-폴더 githubapiapp 으로 열어서
-npm install
-npm install axios
-npm run dev
-
-App.tsx에 빈칸으로 비우겠습니다.
+- npm create vite@4.3
+- Project name: ... githubapiapp
+- Select a framework: » React
+- Select a variant: » TypeScript
+- 폴더 githubapiapp 으로 열어서
+- npm install
+- npm install axios
+- npm run dev
+- App.tsx에 빈칸으로 비우겠습니다.
 
 다 지웠을 때(즉 프로젝트 초기 시작일때 App의 형태)
 
@@ -178,4 +176,152 @@ function App() {
 export default App
 ```
 Github API URL : 
-https://api.github.com/search/repositor?q=react
+- https://api.github.com/search/repositories?q={키워드}
+- https://api.github.com/search/repositories?q=react
+
+url 들어가니까, json 파일이 나오는데,
+full_name / html_url 을 이용할 것 같음
+
+```tsx
+type Repository = {
+  id: number;
+  full_name: string;
+  html_url: string;
+};
+
+function App() {
+  const [keyword, setKeyword] = useState('');
+  const [repodata, setRepodata] = useState<Repository[]>([]);
+  .....
+}
+```
+
+- 사용자 입력의 키워드를 이용하여 REST API 호출을 만들 예정.
+    - 입력 필드와 버튼을 구현해서 적용
+- 사용자가 입력 필드에 키워드를 입려하고, 버튼을 누르면 REST API가 호출되는 방식
+- 사용자 입력에 대한 상태 및 JSON 응답의 데이터에 관한 상태 두 가지를 만들고, 리포지토리 타입을 정의
+- repository는 응답에서 JSON 배열로 반환되기 때문에 repodata의 상태는 Repository 타입의 배열이 됨.
+- 요청을 보낼때는 axios 사용 예정
+
+```tsx
+import { useState } from 'react';
+import axios from 'axios';
+import './App.css'
+
+type Repository = {
+  id: number;
+  full_name: string;
+  html_url: string;
+};
+
+function App() {
+  const [keyword, setKeyword] = useState('');
+  const [repodata, setRepodata] = useState<Repository[]>([]);
+  
+  return (
+    <>
+     
+    </>
+  )
+}
+
+export default App
+```
+
+- 이상까지 입력한 이후 return 문에서 입력 필드와 버튼을 구현하고, 입력 필드에 onChange 관련 리스터를 추가하여 입력값을 keyword 상태에 저장할 수 있도록 해야함. 버튼에는 클릭 리스너가 있고, 주어진 키워드로 REST API를 호출하도록 함수를 작성
+
+- return 완성 후에 저희는 handleClick 로직을 작성할 건데, __백틱(``)__ 을 이용하여 url과 keyword 상태를 연결
+- 요청을 전송하기 위해서 axios.get() 메서드 활용할건데 fetch와 다르게 .json() 사용할 필요가 없다는 점 기억
+
+- Axios는 자동으로 응답 데이터를 파싱(parsing)한 다음 응답 데이터의 item 배열을 repodata 상태에 저장
+그리고 catch 를 사용하여 오류를 처리
+
+- 타입스크립트를 이용하고 있으므로 저희는 GET 요청에서 예상되는 데이터 타입을 정의하는 과정도 추가
+- 응답이 items 속을 포함하는 객체라는 점을 확인했고, 그 다음에 items의 속성의 value 값이 리포지토리 객체의 배열이라는 점도 볼 수 있음. 즉, 데이터 타입은 {items: Repository[]} 입니다.
+
+- 이상의 정보를 응용하여 코드를 작성한다면 -> App.tsx로 이동
+```tsx
+const handleClick = () => {
+    // REST API호출 로직 구현
+    axios.get<{items: Repository[]}>(`https://api.github.com/search/repositories?q=${keyword}`)
+    .then(response => setRepodata(response.data.items))
+    .catch(err => console.log(err))
+  }
+```
+
+- 이상까지 코드를 작성하게 되면 repodata 상태에 값이 저장됨.
+- 이상의 값을 브라우저에서 볼 수 있도록 return을 수정
+- map()을 이용하여 data 상태를 테이블 행으로 변환
+- repository의 url 속성은 \<a>태그의 href 값이 되기 때문에 응용하고자 함
+  - id 속성이 있어서 고유값으로 쓸 예정. 이를 테이블 행의 키로 사용
+- 해당 응답 결과가 리포지토리를 반환하지 않는 경우를 대비하여 조건부 렌더링으로 작성
+
+-> App.tsx로 이동
+
+```tsx
+{repodata.length === 0 ? (
+      <p>접근 가능한 데이터가 없습니다.</p>
+    ):(
+      <table>
+        <tbody>
+          {repodata.map(repo => (
+            <tr key={repo.id}>
+              <td>{repo.full_name}</td>
+              <td>
+                <a href={repo.html_url}>{repo.html_url}</a>
+              </td>
+            </tr>
+          ))}
+        </tbody>
+      </table>
+    )}
+```
+
+로 return 문을 추가
+주의해서 봐야 할 점은 삼항연산자가 응용됐습니다. 근데 끝나는 시점을 확인하는 것이 쉽지 않다.
+
+검색 결과가 없으면 repodata.length === 0 이기 때문에 표시할 정보가 없다고 뜰 것이고 뒷부분에 : 뒤에는 검색 결과가 하나라도 있으면 그것을 table 형태로 표시
+- 이상을 완성했을 때 저희는 repository 를 검색할 수 있는 컴포넌트를 생성했다고 볼 수 있겠습니다.
+
+- 이력서 사이트에 input 태그의 placeholder를 이용하여 기본 검색어를 저장해둔 상태에서 보여주는 방법 등 응용가능
+-> 그래서 웬만하면 개인프로젝트를 placeholder로 걸기 바람
+-> 다만 repository를 검색하는 거긱 때문에 github id 기준이 아님
+아이디 뒤 부분의 / 이후를 확인
+
+* 참고 : github API는 요청횟수 제한이 적용돼서 너무 많이 써먹으면 안됨. 1분에 10회 요청 제한이 있어서 그 이상 검색하고 나면 1분 기다려야 함.
+
+
+### 경쟁 조건 처리
+
+: 컴포넌트가 여러 요청을 빠르게 수행하면 예측할 수 없으나 잘못된 결과를 생성할 수 있는 경쟁 조건(race condition)이 발생할 수도 있음. 네트워크 요청은 비동기적으로 요청이 전송된 순서대로 완료되지 않을 수도 있음.
+
+이상을 이유로 경쟁 조건 처리가 필요합니다.
+
+```jsx
+import {useState , useEffect} from 'react';
+
+function CarData(props) {
+  const [data, setData] = useState({});
+
+  useEffect(() => {
+    fetch(`https://carid.com/car/${props.carid}`)
+    .then(response => response.json())
+    .then(cardata => setData(cardata))
+  } , [props.carid]);
+
+  if(data) {
+    return <div>{data.car.brand}</div>;
+  }else {
+    return null;
+  }
+  // ... 이하 생략 나중에 만듦
+}
+```
+
+이상의 예시는 props.carid 값이 변경될 때 네트워크 요청을 전송
+
+근데 carid가 여러번 빠르게 변경될 경우 렌더링 되는 데이터가 마지막으로 전송된 요청의 데이터가 아닐 가능성이 있음
+-> 비동기적으로 처리하기 때문에 마지막 요청으로 넣은 carid의 데이터 사이즈가 작다면(얘가 이미지가 없다는 이유로), 먼저 끝이 나게 될 것이고, 그것 때문에 요청을 했지만 늦게 끝나게 된 data가 렌더링 될 수도 있습니다.
+
+20250307 에는 useEffect 정리 함수를 활용하여 경쟁 조건을 피하도록 작성하는 방법을 수업
+
