--- a/manual/20250310.md
+++ b/manual/20250310.md
@@ -25,3 +25,331 @@
   - npm install
 - npm install @mui/material @emotion/react @emotion/styled
 - 의존성 끝나면 git push
+
+# Mui 
+
+: 기본 폰트 -> Roboto 인데 / 저희는 Noto Sans Korean을 이용
+- style 을 바꾸는 부분은 css 영역이기 때문에 여태까지 다루었던 App.tsx 파일이 아니라 index.html 을 수정
+
+## 글씨체 수정 방법 # 1(무료 기준) : 구글 폰트
+
+1. https://fonts.google.com/ 로 들어가서 필요한 폰트를 검색
+2. 결과들 중 원하는 것을 선택하여, 우 상단 get font 버튼을 클릭
+3. 링크를 복사하여 index.html의 \<head> 태그에 집어넣음
+
+## 글씨체 수정 방법 # 2(무료 기준) : 눈누
+
+1. https://noonnu.cc/font_page/pick
+2. 이상의 사이트는 한국어를 기준으로 무료 폰트를 제공하는 곳
+3. 광고 보고 .css 형태로 코드를 받아 올 수 있음.
+
+## MUI 란?
+
+: Google 의 Meterial Design Guideline 을 기반으로 한 React UI 라이브러리
+- 모던 하고 일관된 디자인의 UI(User Interface) 를 빠르게 개발 가능
+
+### 장점
+
+- 이미 스타일이 지정되어있는 React Component 를 제공(버튼, 카드, 테이블)
+- 반응형(Responsive) 디자인 지원
+- theme 커스터마이징이 가능
+
+### 사용 방법
+- npm install @mui/material @emotion/react @emotion/styled
+
+#### 버튼 예시
+```tsx
+import  Button from "@mui/material/Button";
+
+export default function App() {
+
+  return (
+    <Button variant="contained" color="primary">클릭하세요</Button>
+  );
+}
+```
+
+-> App.tsx 에서 전부 다 구현하는 것이 아니라, components 별로 구분하여 App.tsx 내에 컴포넌트를 삽입하여
+즉, 조립하는 방식으로 우리가 UI를 꾸밀 수 있음
+
+#### 2. 카드 컴포넌트
+
+```tsx
+import Card from "@mui/material/Card";
+import CardContent from "@mui/material/CardContent";
+import Typography from "@mui/material/Typography";
+
+export default function MyCard() {
+  return(
+    <Card sx={{
+        maxWidth: 300,
+        padding: 2,
+        }}>
+      <CardContent>
+        <Typography variant="h5" component="div">
+          Material UI Card
+        </Typography>
+        <br />
+        <Typography variant="body2" color="text.secondary">
+          이 카드는 Material UI를 이용해서 만들었습니다.
+        </Typography>
+      </CardContent>
+    </Card>
+  );
+}
+```
+
+- 이상의 예시들에서 중점적으로 봐야할 사항은 특정 Component 를 작성한다고 가정했을 때, 어떤 부분들을 import 해와야 하는지 (예를 들어 Button 의 경우에는 import 문이 하나였지만 Card의 경우에는 Card / CardContent / Typography 라는 복수의 요소들을 import 해올 필요가 있음)
+
+#### 3. 입력 관련
+```tsx
+import { TextField } from "@mui/material";
+
+function MyInput() {
+  return(
+    <TextField label="이름 입력" variant="outlined" fullWidth/>
+  );
+}
+
+export default MyInput;
+```
+
+- TextField는 기본적으로 스타일이 적용되어 있습니다. 커스터 마이징하지 않는다면 추가적인 css 없이 사용 가능
+- variant="outlined" -> 외곽선이 있는 필력 필드
+- fullWidth -> 부모 요소의 너비를 100% 차지하도록 속성을 입력
+
+### App2.tsx 관련 파일에서 실습 시작
+
+- MUI는 다양한 레이아웃 컴포넌트를 제공하며 기본 레이아웃 컴포넌틑는 Container 입니다.
+(html 등에서도 class 명 / 혹은 id 명으로 main / root / container 등을 자주 사용)
+
+- Container : 컨텐츠를 가로로 중앙에 배치하는데 이용
+- maxWidth 프롭을 이용, 컨테이너의 최대 너비 지정 가능. default는 lg (큰: large)
+
+MUI를 사용할 경우 css 끼리의 충돌이 있을 수 있기 때문에 사전에 모든 css를 막아두는 편이 더 나을 수도 있음.
+
+main.tsx 파일에서 index.css import 문을 주석처리
+```tsx
+import React from 'react'
+import ReactDOM from 'react-dom/client'
+// import App from './App.tsx'
+import App from './App2.tsx'
+// import './index.css' -> 사용 하지 않고,  vite에서 미리 정의된 스타일을 사용 하지 않음
+
+ReactDOM.createRoot(document.getElementById('root') as HTMLElement).render(
+  <React.StrictMode>
+    {/* <App /> */}
+    <App />
+  </React.StrictMode>,
+)
+
+```
+
+```tsx
+import { useState } from 'react'
+import { Container } from '@mui/material'
+import AppBar from '@mui/material/AppBar'
+import Toolbar from '@mui/material/Toolbar'
+import Typography from '@mui/material/Typography'
+import './App.css'
+
+function App() {
+
+  return (
+    <>
+      <Container>
+        <AppBar position='static'>
+          <Toolbar>
+            <Typography variant="h6">
+              장바구니
+            </Typography>
+          </Toolbar>
+        </AppBar>
+      </Container>
+    </>
+  )
+}
+
+export default App
+
+```
+
+1. MUI의 AppBar / Toolbar / Typography 를 import 했음
+2. AppBar 밒 Typography 에서 적절한 속성값을 넣어줌으로써 Component의 디자인을 하는 중
+- 여기서부터는 해야할 것
+3. App 컴포넌트에서 쇼핑 항목을 저장하려면 배열이 필요 (useState를 쓴 이유). 
+    - 하나의 쇼핑 항목에는 product 명과 / amount 라는 필드를 사용할 예정 -> App2.tsx에서 type 형태로 정의할 예정
+
+```tsx
+export type Item = {
+  prouduct: string;
+  amount: string;
+}
+
+function App() {
+
+  const [items, setItems] = useState<Item[]>([]);
+
+  const addItem = (item: Item) => {
+    setItems([item, ...items]);
+  }
+}
+  이하 생략
+```
+
+- 타입스크립트를 적극적으로 활용한 문법으로 해석을 할 수 있어야 겠습니다.
+- useState라는 React 훅을 사용
+- type을 이용하여 생성되는 객체의 자료형을 명시
+- useState에 제네릭(<>)을 활용하여, 특정 자료형의 배열이 들어갈 것을 명시
+- addItem 함수를 정의하면서 자료형을 고정시켰고, setItems 함수에 스프레드 문법을 적용
+
+이상의 코드에서 JS / React / TS 문법이 전부 들어가있습니다. 앞으로 여러분이 보게 될 코드들은 이상의 형태의 심화버전
+
+AddItem.tsx 컴포넌트 생성
+
+```tsx
+import { useState } from "react";
+import { Button, Container } from "@mui/material";
+import TextField from "@mui/material/TextField";
+import {Dialog} from "@mui/material";
+import DialogActions from "@mui/material/DialogActions";
+import DialogContent from "@mui/material/DialogContent";
+import DialogTitle from "@mui/material/DialogTitle";
+import { Item } from "../App2";
+
+
+function AddItem(props) {
+
+  const [open, setOpen] = useState(false);
+
+  const handleOpen = () => {
+    setOpen(true);
+  }
+
+  const handleClose = () => {
+    setOpen(false);
+  }
+
+  return(
+    <>
+      <Button onClick={handleOpen}>Add Item</Button>
+      <Dialog open={open} onClose={handleClose}>
+        <DialogTitle>New Item</DialogTitle>
+        <DialogContent>
+
+        </DialogContent>
+        <DialogActions>
+          <Button onClick={handleClose}>Cancel</Button>
+          <Button onClick={addItem}>Add</Button>
+        </DialogActions>
+      </Dialog>
+    </>
+  );
+}
+
+export default AddItem;
+```
+AddItem 컴포넌트는 MUI 모달(modal) 대화 상자를 이용하여 데이터를 수집하도록 작성할 예정
+해당 폼에 product / amount라는 두 개의 입력 필드와 App 컴포넌트에 AddItem 함수를 호출하는 버튼을 추가할 예정
+
+App 컴포넌트에 있는 addItem 함수를 호출할 수 있으려면 AddItem 컴포넌트를 렌더링 할 때 프롭을 통해서 전달해야 함.
+모달 Dialog 컴포넌트 외부에 사용자가 새 쇼핑 항목을 입력할 수 있는 모달 폼을 여는 버튼을 추가할 예정(했음)
+
+해당 버튼은 컴포넌트가 처음 렌더링할때 유일하게 보이는 요소가 될 겁니다.
+
+-> 모달 폼을 위해서 Dialog, DialogActions, DialogContent, DialogTitle 등의 MUI 컴포넌트를 임포트.
+모달 폼의 내부에는 함수를 실행할 Button 및 입력할 TextFiled 컴포넌트가 필요해 보이기에(원래대로라면 여러분들이 프로토 타입을 만들면서, 혹은 피그마 등을 이용함으로써 이 부분에 input창이나 버튼이 필요하다는 걸 인지한 상태로 작성) import 해옴
+
+#### Dialog 관련
+
+: Dialog 컴포넌트에는 'open 이라는 프롭'이 있으며, 값이 true 면 대화상자(모달)가 표시. open 프롭의 initialValue는 false 이며, 대화상자가 숨겨져 있다가, 모달 대화상자를 열고 닫기 위해 'open이라는 상태'를 선언하고, 열고 닫는 함수를 정의
+handleOpen은 setOpen(true)로, handleClose는 setOpen(false) -> 얘가 프롭에 전달되어 모달 대화 상자를 열고 닫게 될겁니다.
+
+-> return 문 내에 Dialog 및 Button 컴포넌트를 추가. 컴포넌트가 처음 렌더링 될 때 표시되는 버튼이 Dialog 외부에 하나 선언(AddItem 버튼). 걔를 누르면 handleOpen을 통해서 setOpen(true)가 적용되면서 대화상자가 팝업되게 됨. 그리고 그 대화상자 내부(Dialog 컴포넌트 내부)에 취소 버튼 및 새 항목 추가 버튼을 작성했고, 특히 Add에 해당하는 버튼은 추후 구현할 addItem 함수를 호출할겁니다.
+
+-> 그래서 App2.tsx로부터 addItem 함수를 import 해옴
+
+-> AddItem.tsx로 이동
+
+```tsx
+import { useState } from "react";
+import Button from "@mui/material/Button";
+import TextField from "@mui/material/TextField";
+import Dialog from "@mui/material/Dialog";
+import DialogActions from "@mui/material/DialogActions";
+import DialogContent from "@mui/material/DialogContent";
+import DialogTitle from "@mui/material/DialogTitle";
+import { Item } from "../App2";
+
+
+function AddItem(props) {
+
+  const [open, setOpen] = useState(false);
+  // item과 관련된 상태를 정의
+  const [item, setItem] = useState<Item>({
+    prouduct: '',
+    amount: '',
+  });
+
+  const handleOpen = () => {setOpen(true);}
+  const handleClose = () => {setOpen(false);}
+
+  return(
+    <>
+      <Button onClick={handleOpen}>Add Item</Button>
+      <Dialog open={open} onClose={handleClose}>
+        <DialogTitle>New Item</DialogTitle>
+        <DialogContent>
+          
+        </DialogContent>
+        <DialogActions>
+          <Button onClick={handleClose}>Cancel</Button>
+          <Button onClick={addItem}>Add</Button>
+        </DialogActions>
+      </Dialog>
+    </>
+  );
+}
+
+export default AddItem;
+```
+
+로 수정한 상태에서 이제 비어있는 DialogContent 컴포넌트 내에 사용자로 부터 데이터를 수집하기 위한 TextFiled 를 적용.
+몇 몇 부분에 대한 속성도 건드릴 예정
+그런 모든 프롭 관련들은 MUI 문서 및 구글링을 통해서 확인할 수 있는데, 강사님과 몇개 써볼 예정
+
+#### TextFiled 관련
+
+: 텍스트 필드의 value 프롭은 입력한 값을 저장하려는 상태와 동일
+사용자가 텍스트 필드에 무언가 입력한다면 -> onChange를 상기해야함.입력한 값을 상목 상태에 저장
+
+```tsx
+type AddItemProps = {
+  addItem: (item: Item) => void;
+}
+
+function AddItem(props: AddItemProps) {
+}
+```
+
+프롭에서 받은  'addItem 함수를 호출하는 함수'를 정의해야 합니다. 해당 함수는 새 쇼핑항목을 argument 로 받을 겁니다. type을 정의하면서 addItem 함수는 Item 타입의 argument를 하나만 받으며 return 값이 없습니다.
+
+-> 새로운 쇼핑 항목이 item 상태에 저장되고, 사용자가 입력한 값이 포함됩니다. addItem 함수는 프롭에서 가져왔으므로 props 키워드를 통해 호출할수 있음.(매개변수 명이 props고 그 타입이 AddItemProps) 그리고 추가한 뒤에 모달 상자를 닫을 수 있도록 하는 handleClose 함수도 다시 한번 포함
+
+-> AddItem.tsx로 이동
+
+-> 전체 다 작성한 뒤에 유의할 점 
+
+AddUtem.tsx 컴포넌트에도, App2.tsx 컴포넌트 내에도 addItem 이라는 동일한 명칭의 함수가 존재하는 상황
+
+하지만 내부 구현을 확인해보면 차이점이 존재
+
+AddItem.tsx 컴포넌트는 addItem()함수는 하나의 item 만을 가짐
+반면 App2.tsx 컴포넌트의 addItem() 함수는 item 들의 배열을 가리킴
+이 둘을 연결함으로써, 추후 App2.tsx를 렌더링 하게 될 경우 여태까지 item 들을 배열의 형태로 확인하게 될 예정
+
+이것을 map을 사용하여 table 형태로 보여줄 수 도 있을 것이고,(github에서도 함)
+weather 처럼 구역을 나눠서 제시할 수도 있음
+
+내일 수업시 이를 map을 이용해서 볼 수 있도록 할 예정이지만 여러분들은 openweatherapi에서 했던 방식 또한 여전히 기억한 상태여야 함
+
