--- a/manual/20250311.md
+++ b/manual/20250311.md
@@ -62,7 +62,76 @@ Route 컴포넌트는 여러 Route 컴포넌트를 감싸는 것이 가능한데
 예를 들어 이상의 링크를 클릭하면 Contact 엔드포인트로 이동하게 됩니다(JS에서는 \<a>태그와 \<img>태그를 합치는 등의 학습을 해왔습니다.)
 
 ## React Router 프로젝트 생성
-npm create vite@4.3
-routerapp
-npm install
-npm install react-router-dom@6
+- npm create vite@4.3
+- routerapp
+- react
+- typescript
+- 폴더 넘어가서
+  - npm install
+  - npm install react-router-dom@6
+- git add .
+- git commit -m "feat: "
+- git push
+
+### 라우팅 이용 컴포넌트 예시 적용
+components 폴더를 src 내부에 생성 후에 거기에 Home.tsx / Contact.tsx 파일을 생성
+
+```tsx
+import { BrowserRouter, Routes, Route, Link } from 'react-router-dom'
+// 만든 컴포넌트들을 import
+import Home from './components/Home'
+import Contact from './components/Contact'
+
+import './App.css'
+
+function App() {
+
+  return (
+    <>
+      <BrowserRouter>
+        <nav>
+          <Link to="/">Home</Link>{' | '}
+          <Link to="/contact">Contact</Link>
+        </nav>
+        <Routes>
+          <Route path="/" element={<Home />} />
+          <Route path="/contact" element={<Contact />} />
+        </Routes>
+      </BrowserRouter>
+    </>
+  )
+}
+
+export default App
+```
+
+### path 프롭의 와일드 카드(*) 이용 예시
+
+PageNotFound 경로를 만들억ㅂ니다.
+
+component/PageNotFound.tsx 만들고
+return h1 사이즈의 Page Not Found 작성 후
+App.tsx 로 이동
+-> 작성 할 수 있으면 Routes 내에 새 Route 컴포넌트를 생성하여 Page Not Found를 띄울 수 있도록 하셔도 됩니다.
+\<nav>는 건드리지 말고
+
+### 중첩 Route
+
+ContactLondon.tsx 만들고 return h2 Hello, London
+ContactSeoul.tsx 만들고 return h2 Hello, Seoul
+
+- 중첩 Route의 코드 예시
+```tsx
+<Route path="/contact" element={<Contact />}>
+  <Route path="seoul" element={<ContactSeoul />} />
+  <Route path="london" element={<ContactLondon />} />
+</Route>
+```
+
+* useRoutes() Hook을 이용하여 React 요소 말고 JS 객체를 이용해 경로를 선언하는 방법도 있습니다.
+
+서드파티를 사용하기 위한 공식 문서를 참조하는 역량 -> 관련 공식 문서 부분을 긁어서 구글 및 chat gpt를 사용할 수도 있는데
+
+chat gpt는 일정 기간까지의 정보를 기준으로 AI답변이 생성 -> 완전 최신화 되어있는 버전의 경우 적절한 답변을 생성하지 못할  수 있기 때문에
+
+항상 stackoverflow 및 구글링을 통해 정보를 수집하신 후에 작성할 필요가 있음.
