feat:20250311 react essential project started

--- a/manual/20250311.md
+++ b/manual/20250311.md
@@ -135,3 +135,105 @@ ContactSeoul.tsx 만들고 return h2 Hello, Seoul
 chat gpt는 일정 기간까지의 정보를 기준으로 AI답변이 생성 -> 완전 최신화 되어있는 버전의 경우 적절한 답변을 생성하지 못할  수 있기 때문에
 
 항상 stackoverflow 및 구글링을 통해 정보를 수집하신 후에 작성할 필요가 있음.
+
+# 01-starting-project 관련
+- zip파일 받아서, 압축 풀고, 폴더 하나 들어가서 잘라내기 후 프로젝트 부분으로 옮겨와서 붙여넣기
+- 01-starting-project 폴더로 이동 후 -> npm install(스타팅 프로젝트 파일 열어보면 node 관련 폴더가 없기에 npm run dev가 불가능)
+- npm install -> 의존성 설치
+- npm run dev -> 서버 실행
+- 메인폴더로 이동
+  - git add . 
+  - git commit -m "feat:20250311 01-starting-project started"
+  - git push
+
+## task # 1
+
+components 폴더를 만들고, Header.jsx 파일을 생성
+App.jsx의 Header 부분을 분리하여 컴포넌트화 하시오.
+
+### 풀이
+src 내부에 components 폴더 생성
+-> Header.jsx 파일 생성
+-> App.jsx 내부의 return 에서 \<header>\</header> 사이를 전부 복+붙 
+
+```jsx
+function Header() {
+  return (
+    <header>
+      <img src="src/assets/react-core-concepts.png" alt="Stylized atom" />
+      <h1>React 필수요소 복습</h1>
+      <p>
+        Fundamental React concepts you will need for almost any app you are
+        going to build!
+
+        <br />
+        대부분의 앱을 위해 당신이 필요로 할 근본적인 React 개념 학습😀
+      </p>
+    </header>
+  );
+}
+
+export default Header;
+```
+
+### task # 2
+
+const reactDescriptionsEng 배열을 이용하여
+Header 컴포넌트의 p 태그 내의 Fundamental 을 Crucial 로 바꿀 수 있도록 작성
+
+### 풀이
+
+1. React Component 상에서 JS 변수를 불러낼 수 있는 방법 -> {}
+2. 배열의 특정 element 를 뽑아오는 방법 -> index 넘버를 사용 0,1,2, ... 순서
+
+```jsx
+const reactDescriptionsKor =['근본적인', '결정적인', '핵심적인'];
+const reactDescriptionsEng =['Fundamental', 'Crucial', 'Core'];
+
+function Header() {
+  return (
+    <header>
+      <img src="src/assets/react-core-concepts.png" alt="Stylized atom" />
+      <h1>React 필수요소 복습</h1>
+      <p>
+        {reactDescriptionsEng[1]} React concepts you will need for almost any app you are
+        going to build!
+        <br />
+        대부분의 앱을 위해 당신이 필요로 할 근본적인 React 개념 학습😀
+      </p>
+    </header>
+  );
+}
+```
+
+### task # 3
+```jsx
+function getRandomInt(max) {
+  return Math.floor(Math.random() * (max + 1));
+}
+
+```
+
+이상의 함수를 분석하고, 강의 내용에 따라 페이지를 새로고침 할 때마다  Fundamental, Curcial, Core 셋 중의 하나의 element가 임의적으로 출력될 수 있도록 Header Component를 수정
+
+function getRandomInt는 수정하지 않아도 좋습니다.(하드코딩을 방지하기 위한 함수 수정은 추후)
+
+### 풀이
+
+이상의 함수 풀이 결과 max 매개변수는 reactDescriptionEng 배열의 최대 인덱스 넘버임을 확인 할 수 있음
+
+getRandomInt(2)를 호출했을 경우 -> 0 ~ 2 셋 중 하나에 해당하는 정수가 반환되기 때문에
+-> JS 시간에 로또 번호 생성기에서 비슷한 알고리즘 진행했습니다.
+```jsx
+<p>
+  {reactDescriptionsEng[getRandomInt(2)]} React concepts you will need for almost any app you are
+  going to build!
+  <br />
+  대부분의 앱을 위해 당신이 필요로 할 {reactDescriptionsKor[getRandomInt(2)]} React 개념 학습😀
+</p>
+```
+
+로 작성하게 되면 페이지 새로고침을 할 때 마다 배열 내의 랜덤한 element 를 출력하게 됨
+* 이상에서의 문제점은 한국어와 영어 버전을 각각 {reactDescriptionsKor[getRandomInt(2)]} 형태로 작성했을 경우 한국어 버전과 영어 버전의 해석이 달라지는 문제점
+
+이유는 뭐고, 해결 방법은 무엇일지 20250312에 수업할 예정
