--- a/manual/20250317.md
+++ b/manual/20250317.md
@@ -187,3 +187,16 @@ useContext는 전역적으로 데이터를 공유하기 때문에 중간 다리 
 ### ContextAPI 및 useContext Hook 이용, props drilling 해결하기 
 
 새 프로젝트 생성
+- npm create vite@4.3
+- kpoplistcontext
+- react
+- javascript
+- 폴더 이동
+- npm install npm run dev
+- git add . 
+- git commit -m "feat: context API applied kpop list started" 
+- git push
+- App.jsx 초기화
+- src/components/Button.jsx, KPoplist.jsx, Main.jsx 생성
+- src/context/context.jsx 생성
+- App.css 파일 Kpoplist의 App.css 코드 그대로 복-붙
