--- a/manual/20250320.md
+++ b/manual/20250320.md
@@ -196,7 +196,6 @@ const result = useMemo(() => calc(a,b), [item]);
 2. useMemo는 '렌더링 과정 중에 실행' 됩니다. 렌더링 과정 중에 의존성 배열의 값이 변경되었는지를 확인하고, 값이 변경되었다면 이전에 저장한 값과 비교하여 값이 다른 경우에만 리렌더링 해줍니다. 따라서 useMemo는 메모이제이션 기법을 통해 불필요한 연산을 최소화하고 리렌더링을 막을 수 있으므로 렌더링 성능을 최적화 할 때 사용
 
 ## useMemo를 사용 해보겠습니다.
-
 - npm create vite@4.3
 - usememoapp
 - react
@@ -204,4 +203,152 @@ const result = useMemo(() => calc(a,b), [item]);
 - 폴더 이동
   - npm install
   - npm run dev
-- github upload
+- github upload(usememoapp started)
+
+```jsx
+import { useState } from 'react'
+import './App.css'
+
+function App() {
+  const [ number, setNumber ] = useState(0);
+  const [ text, setText ] = useState('');
+
+  // 무거운 연산 수행하는 함수 정의 및 호출
+  function heavyCalc() {
+    let sum = 0;
+    for(let i = 0; i < 1000000; i++) {
+      sum += i;
+    }
+    return sum;
+  }
+  let calc = heavyCalc();
+  console.log('반복중');
+
+  // number 값을 바꾸는 함수
+  const increaseNum = () => {
+    setNumber((prev) => prev + 1);  // 왜 setNumber(number + 1); 이 아니었는지 생각!
+  };
+
+  const decreaseNum = () => {
+    setNumber((prev) => prev - 1);
+  };
+
+  // text 값을 바꿔주는 함수
+  const handleText = (e) => {
+    setText(e.target.value);
+  };
+
+  return (
+    <>
+      <h4>😀 반복적이고 무거운 연산값</h4>
+      <p>{calc}</p>
+      <br /><br />
+      <h4>😀 숫자 바꾸기</h4>
+      <button onClick={increaseNum}>+</button>
+      <button onClick={decreaseNum}>-</button>
+      <br /><br />
+      <h4>😀 문자 바꾸기</h4>
+      <input type="text" onChange={handleText}/>
+      <br /><br />
+      여기에 추가 컴포넌트를 작성한 다음에 넘겨줄겁니다.
+    </>
+  )
+}
+
+export default App
+```
+
+- 이상의 App 컴포넌트에는 복수의 함수가 존재하는데, useMemo() Hook 증명을 위해 heavyCalc 함수를 정의하고 ,호출까지 했습니다.
+- 이상에서 0 ~ 1000000 까지의 합을 구하는 반복문이 App 컴포넌트가 렌더링 될 때마다 일어나고 있음을 확인할 수 있음
+- 그 결과를 확인하기 위해서 console.log()를 통해 개발자 도구에서 확인도 가능하게끔 코드가 작성되어 있습니다.
+
+- 두번째로 increaseNum / decreaseNum 함수에서 중요한 점은 setNumber(number + 1) / setNumber(number - 1) 으로 1씩 증가 및 감소를 작성하지 않고, setNumber((prev) => prev + 1) / setNumber((prev) => prev - 1) 으로 작성했다는 점입니다.
+
+```jsx
+function triple() {
+  setNumber(number + 1);
+  setNumber(number + 1);
+  setNumber(number + 1);
+}
+
+return <button onClick={triple}>+3</button>
+```
+과 같은 의사 코드가 있다고 가정했을 때, 실제로 +3씩 되는 것이 아니라 +1 씩 된다는 점에서 언급한 적 있습니다.
+- 그 이유는 이전 상태를 기준으로 클릭이 일어났을 때 레더링을 하게 되는데, 이전 상태(예를 들어 1)에서 +1 한 값이 렌더링 한 번만 일어나기 때문에 +3 이 아니라 +1이 된다는 점입니다. 이를 막고, 3씩 증가하는 것을 담보하기 위하여
+
+```jsx
+function triple() {
+  setNumber((prev) => prev + 1);
+  setNumber((prev) => prev + 1);
+  setNumber((prev) => prev + 1);
+}
+return <button onClick={triple}>+3</button>
+```
+
+과 같이 작성할 수 있습니다.
+- 즉 이전 상태를 매개변수로 받아 더한다는 점을 담보하는 부분이 화살표 함수가 되겠습니다.(vite 프로젝트 처음 생성시 참조)
+
+```jsx
+setCount((count) => count + 1); // 으로 되어있습니다.
+```
+
+저희는 첫 수업 때 ```setCount((preCount) => preCount + 1);```으로 수정했구요
+
+```jsx
+import { useMemo } from "react";
+
+export default function ShowState({ number, text}) {
+  const consoleNumber = (number) => {
+    console.log('숫자가 변경되었습니다.');
+    return number;
+  }
+
+  const consoleText = (text) => {
+    console.log('문자가 변경되었습니다.');
+    return text;
+  }
+
+  const showNum = consoleNumber(number);
+  const showText = consoleText(text);
+
+  return(
+    <div>
+      <p>숫자 : {showNum}</p>
+      <p>문자 : {showText}</p>
+    </div>
+  );
+}
+```
+이상의 ShowState 컴포넌트는 App.jsx 에서 바꾼 값들을 출력해주고 값이 바뀔 때마다 console.log에 안내가 찍히도록 작성했습니다.
+
+- 그리고 나서 페이지를 실행하면, + / - 버튼을 눌렀을 때, 그리고 input 창에 문자를 작성할 때마다 number / text가 바뀌는 것을 확인할 수 있는데, 느리게 렌더링이 일어납니다.
+- 이는 숫자와 문자를 바꿈으로써 화면이 리렌더링이 일어날 때마다 heavyCalc 함수가 실행되기 때문입니다.
+- 근데 App 컴포넌트에 정의했던 반복문의 연산 결과값은 변하지 않는다는 점에 주목할 필요가 있음 -> 새로 연산할 필요가 없다.
+- 이때 쓸 수 있는 것이 이전에 이미 계산한 값을 재사용할 수 있도록하는 useMemo 가 되겠습니다.
+
+App.jsx의 heavyCalc 함수 실행문을 useMemo로 이하와 같이 감싸게 된다면
+```jsx
+const calc = useMemo(() => {
+  return heavyCalc();
+}, []);
+```
+- 여기도 작성하니까 숫자랑 문자만 바뀌고 있지 '반복수행중입니다.' 뜨지 않는 것을 봤을 때 useMemo()에 있는 부분이 렌더링이 일어나지 않고 있다는 점을 알수 있습니다. 즉 App 컴포넌트는 렌더링이 일어나지 않음.
+
+- increaseNum / decreaseNum 을 실행하여 {number} 의 값을 동적으로 바꾸더라도 반복 수행중입니다는 뜨지 않고
+- 숫자가 변경되었습니다, 라는 문구와 문자가 변경되었습니다, 가 출려되는 것을 확인할 수 있음
+
+- 변경하고자 하는 state에 해당되지 않는 함수가 실행될 때 필요가 없을 것 같습니다.
+  - 즉, increaseNum을 실행 시켰는데 문자가 변경되었습니다가 뜰 필요가 없다는 의미
+
+- 그렇다면 ShowState 컴포넌트에도 useMemo()를 적용할 수 있을 것 같습니다.
+
+```jsx
+const showNum = useMemo(() => consoleNumber(number), [number]);
+```
+이 힌트인데, 문자 부분도 동일하게 적용하여 ShowState 컴포넌트를 수정하시오
+- import useMemo 빠지면 안됨.
+
+## useMemo 실습 예제
+
+- useMemo를 사용하여 useEffect의 의존성 배열이 객체 타입일 때 생기는 참조 동일성 문제를 해결하는 방식을 코드로 풀이 할겁니다.
+- 방금과 마찬가지로 문제 상황을 코딩하고, 증명하고, 해결 방안을 풀이하는 방식으로 진행될 예정
