feat: 20250321 reacttodoapp started

--- a/manual/20250324.md
+++ b/manual/20250324.md
@@ -1,3 +1,10 @@
 # 코인 가격 추적기
 
 ## App.jsx 초기화
+Coin tracker API 주소 
+- https://api.coinpaprika.com/v1/tickers
+
+이상의 API를 들어가서 확인했을 때 JSON 데이터는 전체는 배열Array, 그리고 element는 Object 형태로 되어있으면서, arr.length = 2000 입니다.
+즉, 0번지 부터 1999 까지 있는 상황입니다.
+
+그리고 객체 하나당 properties의 숫자도 매우 많았습니다. 그런 API가 매번 렌더링 될 떄마다 다시 불러와진다면 사용성이 매우 부정적일겁니다(느려서).
