feat: 20250325 movieapp Router lesson

--- a/manual/20250325.md
+++ b/manual/20250325.md
@@ -19,3 +19,8 @@
 - 인프런 - 1만 시간의 법칙
   - https://www.inflearn.com/course/1만시간-웹페이지-제작
 
+유의 사항
+1. GitHub page 를 통한 배포 방식은 루트 프로젝트 폴더를 기준으로 하기 때문에 react 수업 때와 달리
+하나의 리포지토리에 하나의 프로젝트만 있는 경우가 많음
+
+이때 리포지토리 주소가 곧 배포 URL 이 되기 때문에 초반에 말씀드렸던 것처럼 강사 통제하에 리포지토리 타이틀을 다는 것이 아니라 여러분 나름대로 작성할 필요가 있음 -> 강의 상에서 리포지토리타이틀을 이런식으로 썻다 하면서 만들게 되는 경우가 있는데 이때, 여러분이 여러분 나름대로 타이틀을 작성할 필요가 있겠습니다.
