feat:20250326 react-router-dom@6 도입 및 코드 수정

--- a/manual/20250326.md
+++ b/manual/20250326.md
@@ -104,5 +104,16 @@ React 상에서 URL 경로를 기반으로 페이지를 분기하고 싶을 때(
 
 21:30분에 안내 할 예정
 1. React 보라색 사이트를 복사하여 내부의 content를 이력서 양식으로 바꿔보기
+  - 이력서 양식으로 바꾸고 나서 적절한 icon / img를 찾을 필요가 있음
+
 2. 1만 시간의 법치 Vanilla JS 및 HTML / CSS 다루기
+  - 좀 정석적이고 고전적 형태의 HTML에서 modern HTML 형태를 학습
+  - github 배포 기본도 학습
+  
 3. GitHub 블로그 fork하여 기술 블로그화 하기
+  - 저희가 날짜 별로 md파일이 정리
+  - 기술 블로그화 하기 위해서는 기본적으로 chapter / project / 문제 상항에 대한 대응 및 개념
+
+### 지금 detail-backdrop 이 detail-overlay와 차이가 나는 이유 :
+기본적으로 detail-backdrop 에서 movie.background_image_original을 참조하고 있는데 이 이미지 파일을 통짜로 가지고 오고, 그 이미지의 가로 세로가 파일마다 다른 상태에서 overlay 사이즈와 일치하지 않는 경우가 있습니다.
+css 작성할 때 브라우저 사이즈를 확인하고, 이후 수정 후 다시 Home.css 관련 수업을 할 예정
